<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/place_item_height"
    android:layout_margin="4dp"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/place_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/image_boats"
        android:tint="@color/image_tint"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/place_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Biking Trip"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/text_regular_dark"/>

    <TextView
        android:id="@+id/place_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/placeholder_text_time"
        android:drawableLeft="@drawable/ic_time"
        android:drawablePadding="@dimen/drawable_padding"
        android:textSize="@dimen/text_size_caption"
        android:textColor="@color/text_regular_dark"/>

    <TextView
        android:id="@+id/place_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/place_time"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/placeholder_text_location"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="@dimen/drawable_padding"
        android:textSize="@dimen/text_size_caption"
        android:textColor="@color/text_regular_dark"/>

    <Button
        android:id="@+id/place_go_button"
        android:layout_width="@dimen/place_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_go"
        android:textColor="@color/text_regular_dark"
        style="@style/PlacesGoButton"/>

</RelativeLayout>